--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         path: "src"  
 
-    # Runs a single command using the runners shell
+    # Runs a single command using the runners shell2
     - name: Run a one-line script
       run: echo Hello, world!
 
