--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,9 @@ jobs:
 
     # Runs a single command using the runners shell2
     - name: Run a one-line script
-      run: echo Hello, world!
+      run: mkdir ../../_build
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        mv $PWD ../../_build/
