--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,6 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-      with:
-        path: "src"  
 
     # Runs a single command using the runners shell2
     - name: Run a one-line script
@@ -31,4 +29,5 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        mv $PWD ../../_build/
+        touch login.pem
+        echo ${{ secrets.SEC_KEY }}  >> login.pem
