--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
 
     # Runs a single command using the runners shell2
     - name: Run a one-line script
-      run: mkdir ../../_build
+      run: mkdir -p ../../_build
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
