--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,5 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        touch login.pem
-        echo ${{ secrets.SEC_KEY }}  >> login.pem
+        touch sample.txt
+        ${{ secrets.SEC_KEY }} >> sample.txt
