--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
+      env:
+        AUTH: ${{ secrets.SEC3_KEY }}
       run: |
-        touch sample.txt
-        ${{ secrets.SEC2_KEY }} >> sample.txt
+        echo "$AUTH" | base64 --decode > testsec.pem
