--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Run a multi-line script
       env:
         AUTH: ${{ secrets.SEC3_KEY }}
+        HO: ${{ secrets.H2_NAME }}
       run: |
         echo "$AUTH" | base64 --decode > testsec.pem
-        scp -i testsec.pem ubuntu@${{ secrets.H_NAME }}:~/
+        scp -i testsec.pem ubuntu@echo "$HO" | base64 --decode:~/
