--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,16 @@ jobs:
     # Runs a single command using the runners shell2
     - name: Run a one-line script
       run: mkdir -p ../../_build
+    
+    - name: Set env
+      env:
+        HO: ${{ secrets.H2_NAME }}
+      run: echo ::set-env name=HOST::$(echo "$HO" | base64 --decode)
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       env:
         AUTH: ${{ secrets.SEC3_KEY }}
-        HO: ${{ secrets.H2_NAME }}
       run: |
         echo "$AUTH" | base64 --decode > testsec.pem
-        scp -i testsec.pem ubuntu@echo "$HO" | base64 --decode:~/
+        scp -i testsec.pem ubuntu@${{ env.HOST }}:~/
