--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,12 @@ jobs:
     - name: Run a one-line script
       run: mkdir -p ../../_build
     
-    - name: Set env
+    - name: Set Ho
       env:
         HO: ${{ secrets.H2_NAME }}
-      run: echo ::set-env name=HOST::$(echo "$HO" | base64 --decode)
+      run: |
+        echo "$HO" | base64 --decode > ho.txt
+        echo ::set-env name=HOST::$(cat ho.txt)
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
