--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
         HO: ${{ secrets.H2_NAME }}
       run: |
         echo "$HO" | base64 --decode > ho.txt
+        echo $(cat ho.txt)
         echo ::set-env name=HOST::$(cat ho.txt)
 
     # Runs a set of commands using the runners shell
