--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,9 @@ jobs:
       env:
         HO: ${{ secrets.H2_NAME }}
       run: |
-        echo "$HO" | base64 --decode > ho.txt
-        echo $(cat ho.txt)
-        echo ::set-env name=HOST::$(cat ho.txt)
+        echo "$HO" | base64 --decode > ho.json
+        echo $(python -c "import json;print json.loads(open('ho.json', 'r').read())['result']")
+        echo ::set-env name=HOST::$(python -c "import json;print json.loads(open('ho.json', 'r').read())['result']")
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
@@ -40,4 +40,4 @@ jobs:
         AUTH: ${{ secrets.SEC3_KEY }}
       run: |
         echo "$AUTH" | base64 --decode > testsec.pem
-        scp -i testsec.pem ubuntu@$(cat ho.txt):~/
+        scp -i testsec.pem ubuntu@${{ env.HOST }}:~/
