--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,9 @@ jobs:
       env:
         HO: ${{ secrets.H3_NAME }}
       run: |
-        echo $(python -c "import json;print json.loads(open('ho.json', 'r').read())['result']")
-        echo ::set-env name=HOST::$(python -c "import json;print json.loads(open('ho.json', 'r').read())['result']")
+        echo "$HO" | base64 --decode > ho.txt
+        echo $(python -c "import json;print json.loads(open('ho.txt', 'r').read())['host_name']")
+        echo ::set-env name=HOST::$(python -c "import json;print json.loads(open('ho.txt', 'r').read())['host_name']")
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
