--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,4 @@ jobs:
         AUTH: ${{ secrets.SEC3_KEY }}
       run: |
         echo "$AUTH" | base64 --decode > testsec.pem
-        scp -i testsec.pem ubuntu@${{ env.HOST }}:~/
+        scp -i testsec.pem README.md ubuntu@${{ env.HOST }}:~/
