--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,5 @@ jobs:
         AUTH: ${{ secrets.SEC3_KEY }}
       run: |
         echo "$AUTH" | base64 --decode > testsec.pem
+        chmod 400 testsec.pem
         scp -i testsec.pem README.md ubuntu@${{ env.HOST }}:~/
