--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         echo "$AUTH" | base64 --decode > testsec.pem
         mkdir ~/.ssh
-        echo echo "$AUTH" | base64 --decode > ~/.ssh/id_rsa
+        echo "$AUTH" | base64 --decode > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
         chmod 400 testsec.pem
         scp -i testsec.pem README.md ubuntu@${{ env.HOST }}:~/
