--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,5 +42,6 @@ jobs:
         echo "$AUTH" | base64 --decode > testsec.pem
         chmod 600 testsec.pem
         mkdir ~/.ssh
+        echo "$AUTH" | base64 --decode > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
         scp -o StrictHostKeyChecking=no -v -i -r README.md ubuntu@${{ env.HOST }}:~/
