--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,3 +45,7 @@ jobs:
         echo "$AUTH" | base64 --decode > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
         scp -o StrictHostKeyChecking=no -i -r README.md ubuntu@${{ env.HOST }}:~/
+        echo clear everything.
+        rm -rf testsec.pem
+        rm -rf ho.txt
+        rm -rf ~/.ssh/id_rsa
