--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
         mkdir ~/.ssh
         echo "$AUTH" | base64 --decode > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
-        ssh -o StrictHostKeyChecking=no -i testsec.pem ubuntu@${{ env.HOST }} "ls"
+        scp -o StrictHostKeyChecking=no -i testsec.pem -r README.md ubuntu@${{ env.HOST }}:~/
         cd
         pwd
         exit
