--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,13 +45,10 @@ jobs:
         echo "$AUTH" | base64 --decode > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
         ssh -o StrictHostKeyChecking=no -i testsec.pem ubuntu@${{ env.HOST }} "cd ci-cd-Builds ; ls -la"
-        echo clear everything.
-        rm -rf testsec.pem
-        rm -rf ho.txt
-        rm -rf ~/.ssh/id_rsa
   
   deploy:
     runs-on: ubuntu-latest
+    needs: [build]
     
     steps:
     
